# yolo_enrollement

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
database_enrolement/: Dockerfile  init-db.sh
database_enrolement/migrations/: users_info.sql
migrations/: 01_users_info.sql
src/: main.rs
src/config/: crypto.rs
src/db/: user.rs
src/handlers/: authentication.rs  mod.rs  user.rs
src/models/: user.rs
